Begin defining api for client presentation feedback
